--- a/style.css
+++ b/style.css
@@ -1,14 +1,20 @@
-.body {
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+body {
+  box-sizing: border-box;
 }
 #nav {
-top: 0;
-left: 0;
-width: 100%;
-background-color: rgba(166, 166, 173, 0.205);
-display: flex;
-justify-content: space-around;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(166, 166, 173, 0.205);
+  display: flex;
+  justify-content: space-around;
 }
 canvas {
-    border: 2px solid black;
+  border: 2px solid black;
 }
