--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
   }
   
   body {
     background-color: blueviolet;
     font-family: Arial;
-    margin: 0;
   }
