--- a/style.css
+++ b/style.css
@@ -3,8 +3,40 @@
     padding: 0;
     box-sizing: border-box;
   }
-  
+
   body {
-    background-color: blueviolet;
     font-family: Arial;
   }
+
+  .container {
+    max-width: 80%;
+    margin: 20px auto;
+  }
+
+  .list {
+      display: flex;
+      flex-wrap: wrap;
+  }
+
+  .contact {
+      margin: 70px;
+      padding: 10px;
+      width: 250px;
+      text-align: center;
+      border-radius: 5px;
+      box-shadow: 0px 10px 10px 3px rgba(66, 68, 90, 1);
+      background: #087f23;
+      color: white;
+  }
+
+  .name {
+      margin: 10px;
+  }
+
+  .image {
+      border: 1px solid black;
+      border-radius: 50%;
+  }
+
+
+
