--- a/style.css
+++ b/style.css
@@ -13,9 +13,20 @@
     margin: 20px auto;
   }
 
-  .list {
+  .main-title {
+    display: flex;
+    justify-content: center;
+    border-radius: 5px;
+    box-shadow: 0px 4px 8px 1px #83069c;
+    background: #000;
+    color: #fff;
+
+  }
+
+  .contact-list {
       display: flex;
       flex-wrap: wrap;
+      justify-content: center;
   }
 
   .contact {
@@ -24,19 +35,27 @@
       width: 250px;
       text-align: center;
       border-radius: 5px;
-      box-shadow: 0px 10px 10px 3px rgba(66, 68, 90, 1);
+      box-shadow: 0px 10px 10px 3px #42445a;
       background: #087f23;
-      color: white;
+      color: #fff;
   }
+
+  .image {
+    border-radius: 50%;
+    box-shadow: 0px 0px 6px 2px #000;
+}
 
   .name {
       margin: 10px;
   }
 
-  .image {
-      border: 1px solid black;
-      border-radius: 50%;
+  .footer-desc {
+    display: flex;
+    justify-content: center;
   }
+
+
+
 
 
 
