--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
 body {
   box-sizing: border-box;
 }
+#header {
+  display: none;
+}
 #nav {
   top: 0;
   left: 0;
@@ -17,4 +20,26 @@ body {
 }
 canvas {
   border: 2px solid #CD81D4;
+}
+a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 4px 12px;
+}
+
+a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+#previous {
+  background-color: #a82323;
+  color: rgb(255, 255, 255);
+  border-radius: 50%;
+}
+
+#next {
+  background-color: #fae20b;
+  color: white;
+  border-radius: 50%;
 }
