--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ body {
   background-size: cover;*/
   }
 header {
-    color: rgb(253, 244, 244);
+   
     display: flex;
-    border: 1px solid #6b6027;
+    border: 1px solid #564d20;
     
     background: #5b5958;
    
@@ -28,8 +28,8 @@ header {
     font-size: 50px;
 }
 
-.fa-solid {
-    color: #FDF4F4;
+.fa-plate-wheat{
+    margin-right: 8px;
 }
 
 .articlelist {
@@ -66,23 +66,36 @@ header {
     position: relative;
 }
 
-.buttons {
-    grid-template-columns: 1fr 1fr 1fr;
-    display: grid;
-    justify-content: center;
-    margin-top: 25px;
-
+.foodSuggest{
+    position: relative;
 }
+.buttons1 {
+    position: absolute;
+   top: 10px;
+   left: 15px; 
+   margin-left: 10px;
+  }
+.buttons2 {
+    position: absolute;
+   top: 10px;
+   left: 15px; 
+   margin-left: 10px;
+}
+
+.buttons3 {
+    position: absolute;
+   top: 10px;
+   left: 15px; 
+    margin-left: 10px;
+   }
+
 
 footer {
     border: 1px solid #4d4624;
-    
-  
     border-top-width: 9px;
     border-bottom: 1px;
     margin-top: 18%;
     background: #5b5958;
-   
     font-family: 'Dancing Script', cursive;
     color: #FDF4F4;
     display: flex;
@@ -129,21 +142,13 @@ styleButton:active {
     top: 1px;
 }
 
-i {
-    padding-right: 15px;
-    color: #1f4cc8;
-}
-
 a:link {
     color: green;
     text-decoration: none;
 }
 
-
-
 .titleRecipe1 {
     width: 280px;
-
     font-size: 100%;
     font-family: 'Dancing Script', cursive;
     text-align: center;
@@ -152,24 +157,17 @@ a:link {
     border-radius: 92px 93px 93px 92px;
     background-color: rgba(216, 221, 231, 0.3);
     color: #02201c;
-    
-    
-   
     position: absolute;
-
     top: 83%;
     left: 8%;
-
 }
 
 .titleRecipe2 {
     width: 280px;
-
     font-size: 100%;
     font-family: 'Dancing Script', cursive;
     text-align: center;
     display: inline-block;
-
     color: #02201c;
     border: 2px solid rgba(216, 221, 231, 0.1);
     border-radius: 92px 93px 93px 92px;
@@ -181,38 +179,18 @@ a:link {
 
 .titleRecipe3 {
     width: 280px;
-
     font-size: 100%;
     font-family: 'Dancing Script', cursive;
     text-align: center;
     display: inline-block;
-
     color: #02201c;
     border: 2px solid rgba(216, 221, 231, 0.1);
     border-radius: 92px 93px 93px 92px;
     background-color: rgba(216, 221, 231, 0.3);
-   
-    
-
     position: absolute;
     top: 83%;
     left:8%;
-
 }
-
-/* 
-   .imgFood{
-        position	: relative;
-	width		: 100%; 
-    }
-    h3{
-        color: #1f4cc8;
-            position	: absolute;
-            top		: 200px;
-            left	:0;
-            right: 0;
-            width		: 100%;
-    } */
 
 .imgFood {
     position: relative;
@@ -221,4 +199,42 @@ a:link {
 }
 img{
     border: 1px solid rgba(67, 61, 35, 0.2);
+}
+
+button{
+    color: #6e559c;
+    background-color:rgba(246, 244, 238, 0.2);
+    width: 27px;
+    }
+
+.detailsButton{
+    margin-bottom: 3px;
+ }
+
+.mailButton{
+    width:29px;
+    margin-bottom: 3px;
+}
+
+.youtubeButton{
+    width:29px;
+    margin-bottom: 3px;
+}
+
+.fa-bars{
+    color: #6e3a1f;
+    width: 15px;
+height: 13px;
+}
+
+.fa-youtube{
+color: #a24516;
+width: 15px;
+height: 13px;
+}
+
+.fa-envelope{
+    color: #b75829;
+    width: 15px;
+height: 13px;
 }
