--- a/style.css
+++ b/style.css
@@ -2,13 +2,33 @@ body {
     background-color: rgb(250, 250, 238);
     margin:0.5%;
     position: relative;
-    
+ 
     /*-webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;*/
   }
+.articlelist {
+    background-image: url(obrazki/body.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    width: 100%;
+    max-width: 1000px;
+    height: auto;
+    /* background-color: #E0DB34;background-color: #dfbd17; */
+    
+    border: 1.5px solid rgb(214, 211, 201);
+    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
+    -webkit-box-shadow: 0px 0px 29px -16px rgba(66, 68, 90, 1);
+    -moz-box-shadow: 0px 0px 29px -16px rgba(66, 68, 90, 1);
+    box-shadow: 0px 0px 29px -16px rgba(66, 68, 90, 1);
+}
+
 header {
+    width: 100%;
    
     display: flex;
     border: 1px solid #564d20;
@@ -26,29 +46,15 @@ header {
     margin: 10px;
     font-family: 'Dancing Script', cursive;
     font-size: 50px;
+    color: #FDF4F4;
+    text-shadow: 4px 1px 14px rgb(97, 110, 136);
 }
 
 .fa-plate-wheat{
     margin-right: 8px;
 }
 
-.articlelist {
-    background-image: url(obrazki/body.jpg);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
-    width: 1000px;
-    height: auto;
-    /* background-color: #E0DB34;background-color: #dfbd17; */
-    
-    border: 1.5px solid rgb(214, 211, 201);
-    margin: 0 auto;
-    margin-left: auto;
-    margin-right: auto;
-    -webkit-box-shadow: 0px 0px 29px -16px rgba(66, 68, 90, 1);
-    -moz-box-shadow: 0px 0px 29px -16px rgba(66, 68, 90, 1);
-    box-shadow: 0px 0px 29px -16px rgba(66, 68, 90, 1);
-}
+
 
 .topButtons {
     margin-top: 25px;
@@ -56,6 +62,31 @@ header {
     grid-template-columns: 1fr 1fr 1fr;
     display: grid;
     text-align: center;
+    position: relative;
+}
+
+.data{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.email{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.losuj{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+form{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    
 }
 
 .randomFood {
@@ -66,8 +97,9 @@ header {
     position: relative;
 }
 
-.foodSuggest{
+.foodSuggest{display: flex;
     position: relative;
+    width: auto;
 }
 .buttons1 {
     position: absolute;
@@ -104,13 +136,7 @@ footer {
     border: 1px solid #6b6027;
   }
   
-  p {
-    font-family: 'Dancing Script', cursive;
-    font-size: 100%;
-    color: #FDF4F4;
-    text-shadow: 4px 1px 14px rgb(97, 110, 136);
-  }
-
+  
 .styleButton {
     width: 248px;
     box-shadow: 0px 10px 14px -7px #3e7327;
@@ -237,4 +263,22 @@ height: 13px;
     color: #b75829;
     width: 15px;
 height: 13px;
+}
+
+
+
+@media (max-width:978px ) {.randomFood{
+    display:flow-root;
+  
+
+}
+}
+img{
+    width:300px;
+     height:400px;
+}
+@media (max-width: 799px) {.topButtons{
+    display: block;
+
+}
 }
