--- a/style.css
+++ b/style.css
@@ -16,10 +16,21 @@
   .main-title {
     display: flex;
     justify-content: center;
+  }
+
+  .search-wrapper {
+    display: flex;
+    justify-content: center;
+  }
+
+  .search-bar {
+    width: 100%;
+    height: 40px;
+    padding: 10px;
+    margin-top: 20px;
+    border: 2px solid #087f23 ;
     border-radius: 5px;
-    box-shadow: 0px 4px 8px 1px #83069c;
-    background: #000;
-    color: #fff;
+    
   }
 
   .contact-list {
