trying to make navbar work + bootstrap

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,29 +2,92 @@
 @import url('https://fonts.googleapis.com/css2?family=Meie+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@300&display=swap');
 
-body {
-    padding: 0;
-    margin: 0;
-    min-height: 100vh;
-    background-image: url(/assets/background.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: ghostwhite;
+html {
+    font-size: 1.5vw;
     font-family: 'Roboto', sans-serif;
     color: rgb(45, 45, 45);
 }
 
-/* #top {
-    position: absolute;
-    z-index: 10;
-} */
+body {
+    padding: 0;
+    margin: 0;
+    min-height: 100vh;
+    background-color: #FCFAF6;
+}
+
+#top_section {
+    background-image: url(/assets/background.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 2rem;
+}
+
+#heading {
+    text-align: right;
+    font-size: 1rem;
+}
 
 h1 {
     font-family: 'Martel Sans', sans-serif;
-    font-size: 70px;
+    font-size: 3.5rem;
+    margin: 0;
+    padding: 0;
+}
+
+#heading p {
+    padding: 0;
+    margin: 0;
 }
 
 .serif {
     font-family: 'Meie Script', cursive;
+}
+
+#main.menu {
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.menu_item {
+    list-style-type: none;
+    display: block;
+}
+
+.menu_item a {
+    text-decoration: none;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: rgb(232, 232, 232);
+    letter-spacing: 2px;
+    display: block;
+    padding: 3rem;
+    float: left;
+}
+
+.menu_item a:hover {
+    color: rgb(133, 190, 206);
+}
+
+#login_popup {
+    display: none;
+}
+
+#main_section {
+    position: relative;
+    padding: 3rem;
+    margin: 4rem 0;
+}
+
+.date {
+    font-size: 0.7rem;
+    margin: 0;
+}
+
+.post_title a{
+    text-decoration: none;
+    color: inherit;
 }
