--- a/style.css
+++ b/style.css
@@ -47,18 +47,23 @@ body
 {
   margin: 20pt;
   padding: 20pt;
-  background-color: #f4e55f;
+  font-size: 30px;
+  text-align: center;
+  background-color: #F0E68C;
 }
 
 .weather-container
 {
   margin: 20pt;
   padding: 20pt;
+  font-size: 30px;
+  text-align: center;
   background-color: #F0E68C;
 }
 
 .weather-description
 {
+  margin-top: 40px;
   height: 10%;
 }
 
