--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@
 body {
   height: 100%;
   box-sizing: border-box;
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+body::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
 }
 
 #nav {
@@ -21,17 +26,16 @@ body {
   width: 100%;
   height: 10vh;
   min-height: 50px;
-  background-color: #ecb600;
+  background-color: #f8a500;
   align-items: flex-end;
   display: flex;
   justify-content: space-around;
   text-transform: uppercase;
-  background-image: ;
 }
 #nav button {
   min-height: 48px;
   margin-top: 2px;
-  background-color: #ecb600;
+  background-color:#f8a500;
   padding: 3vh;
   border-top-right-radius: 20px;
   border-top-left-radius: 20px;
@@ -73,16 +77,16 @@ body {
   border: 0;
   padding: 0;
   width: 20%;
-  margin-top: 20%;
+  margin-top: 10%;
+  justify-content: space-between;
   }
 .right {
   flex-direction: column;
   align-items: center;
   float: right;
   border: 0;
-  padding: 0;
   width: 20%;
-  margin-top: 20%;
+  margin-top: 15%;
 }
 
 
@@ -90,17 +94,29 @@ body {
   background-color: #0019d988;
   color: ghostwhite;
   border: 2px #0019d988;
-  padding: 10px;
+  border-radius: 5px;
+  padding: 18px;
   margin: 4px;
   cursor: pointer;
   width: 200px;
   text-align: center;
+  font-size:medium;
+  border: 2px solid #001ad9;
  
+}
+.btn:hover {
+  background-color: #ffc400;
+  color:#001ad9;
+}
+.btn:active {
+  background-color: #ffc400;
+  box-shadow: 0 1px #001ad9;
+  transform: translateY(2px);
 }
 canvas {
   border: 2px solid #cd81d4;
   position: absolute;
-  top: 60%;
+  top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: ghostwhite;
@@ -121,8 +137,19 @@ a:hover {
   color: rgb(255, 255, 255);
   border-radius: 50%;
 }
+#previous-projects-page {
+  margin: auto;
+  display: block;
+  padding: 10px 30px;
+  text-align: center;
+  max-width: fit-content;
+}
 #previous-project-display {
-  display: inline-block
+  display: inline-block;
+  margin-left: 30vh;
+}
+#rendered-elements{
+  justify-content: space-between;
 }
 #next {
   background-color: #001ad9;
@@ -135,13 +162,22 @@ a:hover {
 #generated-emojis {
   display: inline-block;
 }
+#generated-emojis span {
+  cursor: pointer;
+}
 #emojis-button {
-  display: block;
+  display:block;
+  margin: auto;
+  margin-top: 5px;
 }
 .saved-image {
-  height: 35vh;
+  height: 33vh;
   align-items: center;
+  margin: 15px 10px;
+  background-color: #43da532b;
 }
+
+
 #nav #logo {
   cursor: default;
   border-bottom-left-radius: 50%;
@@ -149,6 +185,7 @@ a:hover {
   height: 181px;
   margin-top: auto;
   width: 16%;
+  min-width: fit-content;
   z-index: 10;
 }
 #logo img {
@@ -167,12 +204,6 @@ a:hover {
   max-width: 100vh;
   margin: auto;
 }
-#previous-projects-page {
-  margin: auto;
-  display: block;
-  padding: 10px 30px;
-  text-align: center;
-}
 #about-me img {
 max-width: 30vh;
 max-height: fit-content;
@@ -183,4 +214,11 @@ max-height: fit-content;
 }
 .hide {
   display: none;
+}
+.emojis {
+  text-align: center;
+  /* display: contents; */
+  display: block;
+  font-size: 30px;
+    margin: 10px;
 }
